# rossmann-ops

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.ui  Justfile  README.md  docker-compose.yml  models.dvc  pyproject.toml
.dvc/: config
.github/workflows/: mlops_pipeline.yaml
configs/: observability.yaml  params.yaml
docs/: MLOPS_ARCHITECTURE.md  ML_PIPELINE.md  OBSERVABILITY_AND_SECURITY.md  TEAM_CHEAT_SHEET.md
k8s/: api.yaml  grafana-dashboard.yaml  kind-config.yaml  servicemonitor.yaml  ui.yaml
mlruns/: 1.dvc  mlflow.db.dvc
models/: production_model.dvc  shap_summary.png.dvc  store_target_means.json.dvc
notebooks/: 01_eda.ipynb  02_baseline_model.ipynb  02_modeling.ipynb  03_optuna.ipynb  04_segmented_modeling.ipynb
scripts/: check_docker.py  clean_artifacts.py  export_model.py  install_k8s_tools.py  k8s_up.py  observability_demo.py  simulate_production.py
src/: data_validation.py  train_baseline.py  train_model.py
src/api/: main.py  schemas.py
src/rossmann_ops/: data_validation.py  features.py  train_baseline.py  train_model.py
src/rossmann_ops/api/: main.py  schemas.py
tests/: test_api.py  test_data.py  test_features.py  test_utils.py
ui/: app.py
