[project]
name = "rossmann-ops"
version = "0.1.0"
description = "Retail Demand Forecasting (Rossmann Store Sales) MLOps Pipeline"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "streamlit",
    "pandas",
    "scikit-learn",
    "xgboost",
    "mlflow",
    "dvc",
    "evidently",
    "pandera",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "W", "C90", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
