[project]
name = "rossmann-ops"
version = "0.1.0"
description = "Retail Demand Forecasting (Rossmann Store Sales) MLOps Pipeline"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "streamlit",
    "pandas",
    "scikit-learn",
    "xgboost",
    "mlflow",
    "dvc",
    "evidently",
    "pandera",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "pyyaml>=6.0.3",
    "ipykernel>=7.2.0",
    "pip>=26.0.1",
    "pyarrow>=23.0.1",
    "nbstripout>=0.9.1",
    "ipywidgets>=8.1.8",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "C90", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
