[project]
name = "rossmann-ops"
version = "0.1.0"
description = "Retail Demand Forecasting (Rossmann Store Sales) MLOps Pipeline"
requires-python = "~=3.12.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "streamlit",
    "pandas",
    "scikit-learn",
    "xgboost",
    "mlflow",
    "dvc",
    "evidently",
    "pandera",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "pyyaml>=6.0.3",
    "ipykernel>=7.2.0",
    "pip>=26.0.1",
    "pyarrow>=23.0.1",
    "nbstripout>=0.9.1",
    "ipywidgets>=8.1.8",
    "tqdm>=4.67.3",
    "shap",
    "shapash>=2.8.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "prometheus-client>=0.25.0",
    "lightgbm>=4.6.0",
    "numpy>=2.4.4",
    "rich>=14.3.3",
]

[dependency-groups]
dev = [
    "optuna>=4.8.0",
    "pytest",
    "pytest-cov>=7.1.0",
    "rich>=14.3.3",
    "ruff",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "C90", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rossmann_ops"]
